@@ -5,6 +5,9 @@
  - An embedded LDAP server can now be started automatically if configured accordingly.
 2022-05-11
  - Changed the SQL script updating oauth2_client table
+ 2022-05-12
+ - Implemented mapping of LDAP username to email
+  
 
 # version 0.66
 
